--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -110,9 +110,31 @@ a{
     color: #03a9f4;
 }
 
-.contact-info ul li span{
+
+
+
+.language i{
+    color: #03a9f4;
+}
+
+.language .lang-icons{
+    display: flex;
+}
+
+.language .lang-icon{
+    margin: 5px 20px 0 10px;
+}
+
+.contact-info ul li span.icon-text{
     color: #fff;
-    font-weight: 300;
+    font-weight: 200;
+    font-size: small;
+}
+
+.contact-info ul li span.text{
+    color: #fff;
+    font-weight: 500;
+    font-size: large;
 }
 
 .contact-info.language .percent{
@@ -182,36 +204,36 @@ a{
     font-weight: 300;
 }
 
-.skills .box{
+/* .skills .box{
     position: relative;
     width: 100%;
     display: grid;
     grid-template-columns: 0.5fr 1fr;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.skills .box h4{
+/* .skills .box h4{
     text-transform: uppercase;
     width: 100%;
     color: #848c99;
     font-weight: 500;
-}
+} */
 
-.skills .box .percent{
+/* .skills .box .percent{
     position: relative;
     width: 100%;
     height: 10px;
     background: #f0f0f0;
-}
+} */
 
-.skills .box .percent div{
+/* .skills .box .percent div{
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
-    background: #03a9f4;
-}
+    /* background: #03a9f4; 
+} */
 
 .interest ul{
     display: grid;
@@ -282,6 +304,10 @@ padding: 3px;
         margin: 10px;
         grid-template-columns: repeat(1,1fr);
     }
+    
+}
+
+@media (max-width: 1100px) {
     .interest ul{
         grid-template-columns: repeat(2,1fr);
     }
