--- a/CSS/skillsStyles.css
+++ b/CSS/skillsStyles.css
@@ -1,6 +1,6 @@
 .container-one{
     margin: 20px;
-    padding: 25px;
+    padding: 25px 0px 0px 0px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
