--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -63,7 +63,6 @@ body{
     color: #fff;
     font-size: 1.5em;
     margin-top: 20px;
-    text-transform: uppercase;
     text-align: center;
     font-weight: 600;
     line-height: 1.4em;
@@ -72,7 +71,6 @@ body{
 .profileText h2 span{
     font-size: 0.8em;
     font-weight: 300;
-    text-transform: capitalize;
 }
 
 .contact-info{
@@ -299,6 +297,19 @@ padding: 3px;
     color : black;
 }
 
+.resume-btn{
+    width: 70%;
+    margin: 50px auto;
+    display: flex;
+    justify-content: center;
+    background-color: #03a9f4;
+    color: #fff;
+    min-height: 60px;
+    border-radius: 20px;
+    align-content: center;
+    align-items: center;
+}
+
 @media (max-width: 1000px) {
     .container{
         margin: 10px;
@@ -328,3 +339,4 @@ padding: 3px;
         grid-template-columns: repeat(1,1fr);
     }
 }
+
